<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AccueilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:gravity="center"
        android:text="@string/bienvenue_au_jeu_du_pendu"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnJouer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/jouer" />

    <Button
        android:id="@+id/btnPreference"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/pr_f_rence" />

    <Button
        android:id="@+id/btnHistorique"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/historique" />

</LinearLayout>