<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#DF9976D8"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_anchorGravity="center">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:gravity="center"
        android:text="@string/voulez_vous_red_marer_le_jeu"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/OuiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:backgroundTint="#101010"
            android:lineSpacingExtra="10sp"
            android:padding="2dp"
            android:text="@string/oui" />

        <Button
            android:id="@+id/NonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#070707"
            android:text="@string/non" />
    </LinearLayout>

</LinearLayout>